--- a/src/scss/components/_snackbar.scss
+++ b/src/scss/components/_snackbar.scss
@@ -13,6 +13,7 @@
   width: auto;
   min-width: 480px;
   display: none;
+  z-index: 9999;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2), 0 1px 18px rgba(0, 0, 0, 0.12), 0 6px 10px rgba(0, 0, 0, 0.14);
 
   &--active {
